--- a/_config.yml
+++ b/_config.yml
@@ -105,9 +105,9 @@ analytics:
 # Site Author
 author:
   name             : "Evgeny Zotov"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/bio-photo.jpg"
   bio              : "Strong skills in research, synthesize and articulate with and through DATA. Strong analytical thinker with problem-solving skills and result-oriented.  Has a Ph.D. in technical science (technology of machine building). Blogging and writing  papers on varies topic (with a little bit of zen)."
-  location         : "Somewhere"
+  location         : "Moscow"
   email            :
   links:
     - label: "Email"
@@ -116,16 +116,16 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
-    - label: "Twitter"
+    - label: # "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
-    - label: "Facebook"
+    - label: # "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       # url: "https://github.com/"
-    - label: "Instagram"
+    - label: # "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
 
