--- a/_config.yml
+++ b/_config.yml
@@ -5,13 +5,12 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>Strong skills in research, synthesize and articulate with DATA. Strong analytical thinker with problem-solving skills and result-oriented.  Has a Ph.D. in technical science (technology of machine building). Blogging and writing  papers on varies topics (with a little bit of zen).<br>
   <h3>Skills </h3> 
   <br>Python
-  MySQL
-  Data Mining
-  Data Analysis
-  Data Visualization
-<br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
-  
+  <br>MySQL
+  <br>Data Mining
+  <br>Data Analysis
+  <br>Data Visualization <br>
+ <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+ 
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
