--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Evgeny Zotov # your name (or website title) here
 logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  <h3>Evgeny Zotov </h3>
+  <b3>Evgeny Zotov </b3>
   <br>Strong skills in research, synthesize and articulate with DATA. Strong analytical thinker with problem-solving skills and result-oriented.  Has a Ph.D. in technical science (technology of machine building). Blogging and writing  papers on varies topics (with a little bit of zen).<br>
-  <h3>Skills </h3> 
+  <br><b3>Skills </b3> 
   <br>Python
   <br>MySQL
   <br>Data Mining
