--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <strong> Evgeny Zotov </strong>
   <br>Strong skills in research, synthesize and articulate with DATA. Strong analytical thinker with problem-solving skills and result-oriented.  Has a Ph.D. in technical science (technology of machine building). Blogging and writing  papers on varies topics (with a little bit of zen).
   <br>
-  <strong> Skills </strong>
+  <br><strong> Skills: </strong><br>
   - Python
   - MySQL
   - Data Mining
