--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>Strong skills in research, synthesize and articulate with DATA. Strong analytical thinker with problem-solving skills and result-oriented.  Has a Ph.D. in technical science (technology of machine building). Blogging and writing  papers on varies topics (with a little bit of zen).
   <br>
   <br><strong> Skills: </strong><br>
-  - Python
-  - MySQL
-  - Data Mining
-  - Data Analysis
+  - Python<br>
+  - MySQL<br>
+  - Data Mining<br>
+  - Data Analysis<br>
   - Data Visualization <br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
  
