--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Evgeny Zotov # your name (or website title) here
 logo: "/images/logo.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <strong> Evgeny Zotov </strong>
-  <br>Strong skills in research, synthesize and articulate with DATA. Strong analytical thinker with problem-solving skills and result-oriented.  Has a Ph.D. in technical science (technology of machine building). Blogging and writing  papers on varies topics (with a little bit of zen).
+  <br>Strong skills in research, synthesize and articulate with DATA. Strong analytical thinker with problem-solving skills and result-oriented (of course). Has a Ph.D. in technical science (technology of machine building). I have a passion for writing and I plan to write a fiction novel that will change the entire education system in the country.
   <br>
   <br><strong> Skills: </strong><br>
   - Python<br>
